tests/NormalTests/paczka1/fuzzy1/34192654.err
Error in line 7: 1q3z69UlG A332 84,9
Error in line 10: Kkg A486 75,1
Error in line 24: Kkg A486 96,3
Error in line 23: StGEbp S365 36,7
Error in line 31: StGEbp S365 12,79
Error in line 27: StGEbp A538 0,4
Error in line 37: Kkg A486 27,4
Error in line 36: A538 A332 77,7
Error in line 39: A538 A486 76,0
